--- a/AddressBook/Server/appsettings.Development.json
+++ b/AddressBook/Server/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Abey\\SQLExpress;Database=AddressBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
