--- a/AddressBook/Server/appsettings.Development.json
+++ b/AddressBook/Server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Abey\\SQLExpress;Database=AddressBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=MIKERAD\\SQLExpress;Database=AddressBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
